--- a/Payment/.env
+++ b/Payment/.env
@@ -1,3 +1,3 @@
 Key = rzp_test_rQ2x7anNlieU60
 secret = X0eXVTScUiGia7QboVQfOlEJ
-MONGODB = 'mongodb://127.0.0.1:27017/razorpay'
+MONGODB = 'mongodb+srv://princeprakashakyz10:tdpRRNE1k3V2Ltkr@cluster-app.gwbmr41.mongodb.net/razorpay?retryWrites=true&w=majority&appName=cluster-app'
